--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "@types/chai": "^4.3.1",
     "@types/jest": "^28.1.6",
     "@types/mocha": "^9.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "chai": "^4.3.6",
+    "eslint": "^8.20.0",
     "hashlist-typescript": "^1.0.0",
     "linked-list-typescript": "^1.0.15",
     "mocha": "^10.0.0",
